--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,9 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+.whyChoosUS::-webkit-scrollbar {
+  display: none;
+}
 
 @layer utilities {
   .text-balance {
